svc/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: kubia
